fixed the link for stack overflow and fixed the skills page to look a bit better. Still need icons for skills page

--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -219,7 +219,7 @@ li {
 }
 
 .skillsListItem{
-  padding:10px;
+  padding:0px;
   display: inline;
 }
 
@@ -229,4 +229,5 @@ li {
 
 .contactListItem{
   list-style: none;
+
  }
