--- a/scss/main.css
+++ b/scss/main.css
@@ -196,7 +196,7 @@ li span {
   list-style: none; }
 
 .skillsListItem {
-  padding: 10px;
+  padding: 0px;
   display: inline; }
 
 .contactListItem {
